--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         <h1>
             Meet il mio team
         </h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quo, recusandae aliquid unde accusantium molestias voluptatem perferendis architecto ea reiciendis voluptatum labore optio sunt eum molestiae, distinctio aspernatur vero?
-        
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nulla quod, possimus vel adipisci deserunt temporibus et excepturi pariatur! Ratione, dicta modi mollitia dolorem libero eligendi dolorum voluptatem hic amet?
+        </p>
+
+
         <div class="personale">
             
             <section>               
