--- a/index.html
+++ b/index.html
@@ -20,18 +20,27 @@
 
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente nulla quod, possimus vel adipisci deserunt temporibus et excepturi pariatur! Ratione, dicta modi mollitia dolorem libero eligendi dolorum voluptatem hic amet?
-        </p>
+        </p>Marta Ipsum
 
 
         <div class="personale">
             
             <section>               
-                 <div class="badge">
+                 <div class="badge clearfix">
                     <img src="img/female1.png" alt="Marta Ipsum">
-                    <div class="nome">Marta Ipsum</div>
+                    <div class="nome">Marta IpMarta IpsumMarta IpsumMarta IpsumMarta IpsumMarta IpsumMarta Ipsumsum</div>
                     <div class="professione">SEO specialist</div>
                     <a href="#">Mipsum@gmail.com</a>
                 </div>   
+
+
+
+
+
+
+
+
+
                 <div class="badge">
                     <img src="img/female2.png" alt="Laura Rossi">
                     <div class="nome">Laura Rossi</div>
